# Windows-CalcStandards

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: WindowsStandardsCompilerFlags.cmake  WindowsStandardsInternalUtils.cmake  WindowsStandardsProjectMacros.cmake
include/: Windows-Standards.hpp  load_standard.h  method.h  spectrum.h  standard.h
include/windows_standards/: load_standard.h  method.h  standard.h  wavelength_boundary.h  windows_standard.h
src/: CMakeLists.txt  Windows-Standards.cpp  create_integration_rule.cpp  create_integration_rule.h  create_spectrum.cpp  create_spectrum.h  create_wavelength_boundary.cpp  create_wavelength_boundary.h  create_wavelength_set.cpp  create_wavelength_set.h  integration_rule.h  load_optical_standard.cpp  load_optical_standard.h  load_standard.cpp  load_standard.h  method.cpp  method.h  method_text.h  optical_standard.h  optical_standard_method.cpp  optical_standard_method.h  optical_standard_method_text.h  spectrum.h  standard.h  util.cpp  util.h  wavelength_boundary.h  wavelength_set.h
test/: CMakeLists.txt  create_integration_rule.unit.cpp  create_spectrum.unit.cpp  create_wavelength_boundary.unit.cpp  create_wavelength_set.unit.cpp  load_standard.unit.cpp  read_standard_from_disk.unit.cpp
test/standards/: CENblackbody.std
tests/: CMakeLists.txt  create_integration_rule.unit.cpp
